# Waveshare-Stereo-Camera

./: .gitignore  CMakeLists.txt  README.md  test.cpp
Waveshare-stereo-camera/include/: CameraCalibrationAssistant.h  ConfigHandler.h  DepthImage.h  Image.h  StereoCamera.h  StereoImage.h
Waveshare-stereo-camera/pch/: ProjectHeader.pch
Waveshare-stereo-camera/src/: CameraCalibrationAssistant.cpp  ConfigHandler.cpp  DepthImage.cpp  StereoCamera.cpp  StereoImage.cpp
demoPrograms/: CalibrationDemo.cpp  DepthDemo.cpp  ImageCapturingDemo.cpp
